# PicoMultiUSBMidi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: midi.h  tusb_config.h
src/: main.cpp  midi.cpp  usb_descriptors.c
